[gd_scene load_steps=28 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Chicken/chicken_jump1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Chicken/chicken_jump2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Chicken/chicken_run1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Chicken/chicken_run2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Chicken/chicken_run3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Chicken/chicken_idle1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Chicken/chicken_idle2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Chicken/chicken_idle3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Chicken/chicken_idle4.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Chicken/chicken_idle5.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Chicken/chicken_idle6.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Chicken/chicken_jump_double1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Chicken/chicken_jump_double2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Chicken/chicken_die1.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Chicken/chicken_die2.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Chicken/chicken_die3.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Chicken/chicken_land1.png" type="Texture" id=18]
[ext_resource path="res://phantom_movement/MoveEngine.tscn" type="PackedScene" id=19]
[ext_resource path="res://Audio/cluck.wav" type="AudioStream" id=20]
[ext_resource path="res://Audio/cluck2.wav" type="AudioStream" id=21]
[ext_resource path="res://Sprites/Player/ArrowIndicator.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "DoubleJump",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 2 ) ],
"loop": false,
"name": "Land",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 10.5085
height = 27.5689

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.48795, 17.2095 )

[sub_resource type="Animation" id=4]
resource_name = "Blink"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.24, 0.25, 0.4, 0.49, 0.5, 0.6, 0.74, 0.75, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.156863 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.156863 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.156863 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Hover"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ArrowIndicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -40 ), Vector2( 0, -37 ), Vector2( 0, -40 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.047, 0 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "Idle"
frame = 18
speed_scale = 1.2
playing = true
offset = Vector2( -5.23369, 9.02746 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.7547, 4.7547 )
shape = SubResource( 2 )

[node name="MoveEngine" parent="." instance=ExtResource( 19 )]

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.968597, 6.39247 )
shape = SubResource( 3 )

[node name="ActivateCollisionTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Blink" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 4 )

[node name="CluckAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )

[node name="CluckAudio2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )
attenuation = 0.0412346

[node name="ArrowIndicator" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -37.7901 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )

[node name="ArrowHover" type="AnimationPlayer" parent="."]
anims/Hover = SubResource( 5 )
